package gui;

public interface Resettable {
    void reset();
}
