@startuml package
skinparam defaultFontSize 18
left to right direction
interface BottomPanel.Delegate
interface Checkout.CheckoutDelegate
interface PaymentType.Delegate
interface PropertyChangeListener
interface Resettable
interface ActionListener
abstract PaymentListener

Checkout.CheckoutDelegate  <|-right- BottomPanel.BottomPanel
PaymentType.Delegate  <|-down- BottomPanel.BottomPanel
JPanel <|-right- BottomPanel.BottomPanel

BottomPanel.BottomPanel *-right- PaymentType.PaymentType
BottomPanel.BottomPanel *-right- Checkout.Checkout
BottomPanel.BottomPanel *-right- Total
BottomPanel.BottomPanel o-left- BottomPanel.Delegate


PropertyChangeListener <|-up- BottomPanel.BottomPanel
Resettable <|-up- BottomPanel.BottomPanel
Cart -up-o BottomPanel.BottomPanel
Dimension -up-* BottomPanel.BottomPanel
PaymentListener -up-* BottomPanel.BottomPanel
CashListener -up-* BottomPanel.BottomPanel
CheckListener -up-* BottomPanel.BottomPanel
CreditListener -up-* BottomPanel.BottomPanel

Total *-down- JLabel
Total *-down- JPanel

ActionListener <|-left- PaymentType.PaymentType
PaymentType.PaymentType *-up- JRadioButton
PaymentType.PaymentType *-down- JPanel
PaymentType.PaymentType *-down- PaymentType.Delegate

Checkout.Checkout *-down- JButton
Checkout.Checkout *-down- JPanel
Checkout.Checkout *-left- Checkout.CheckoutDelegate

class BottomPanel.BottomPanel {
    - static final int MAX_WIDTH
    - static final int MAX_HEIGHT
    - Dimension dimension
    - PaymentType paymentType
    - Checkout checkout
    - Total totalPanel
    - PaymentListener paymentListener
    - CashListener cashListener
    - CheckListener checkListener
    - CreditListener creditListener
    - Delegate delegate
    - Cart cart
    + BottomPanel()
    + BottomPanel(Delegate delegate, Cart cart)
    - void initializeView()
    + void propertyChange(PropertyChangeEvent evt)
    + void checkoutButtonClicked(ActionEvent e)
    - void changePaymentListener(PaymentListener paymentListener)
    + void paymentTypeClicked(ActionEvent e)
    + void reset()
}

class Checkout.Checkout {
    ~ JButton button
    ~ JPanel panel
    ~ CheckoutDelegate delegate

    ~ interface CheckoutDelegate
    + Checkout(CheckoutDelegate delegate)
    ~ void createCheckout()
    ~ JPanel getPanel()
}

class PaymentType.PaymentType {
    ~ JRadioButton checkPanel
    ~ JRadioButton cashPanel
    ~ JRadioButton creditPanel
    ~ JPanel panel
    ~ Delegate delegate
    + enum PaymentTypeEnum

    ~ interface Delegate
    + PaymentType(Delegate delegate)
    ~ void createPaymentType()
    - JRadioButton createRadioButton(String name)
    + JPanel getPanel()
    + PaymentTypeEnum getSelected()
    + void actionPerformed(ActionEvent e)
}

class Total {
    - JLabel label
    - JPanel panel
    + Total()
    ~ void createTotal()
    ~ JPanel getPanel()
    + void setTotal(String total)
}
@enduml